--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "Sign in with google",
-  "main": "index.js",
+  "description": "Auth Api",
+  "engines": {
+    "node": "13.9.0"
+  },
+  "main": "server.js",
   "dependencies": {
     "@sendgrid/mail": "^7.0.1",
     "bcrypt": "^4.0.1",
@@ -27,6 +30,7 @@
     "multer": "^1.4.2",
     "multer-gridfs-storage": "^4.0.2",
     "multiparty": "^4.2.1",
+    "node": "^14.0.0",
     "nodemailer": "^6.4.6",
     "npm": "^6.14.4",
     "passport": "^0.4.1",
