--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "multer-gridfs-storage": "^4.0.2",
     "multiparty": "^4.2.1",
     "node": "^14.0.0",
+    "node-pre-gyp": "^0.14.0",
     "nodemailer": "^6.4.6",
     "npm": "^6.14.4",
     "passport": "^0.4.1",
