--- a/package.json
+++ b/package.json
@@ -2,10 +2,7 @@
   "name": "server",
   "version": "1.0.0",
   "description": "Auth Api",
-  "engines": {
-    "node": "13.9.0"
-  },
-  "main": "server.js",
+  "main": "index.js",
   "dependencies": {
     "@sendgrid/mail": "^7.0.1",
     "bcryptjs": "^2.4.3",
