--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 JWT_SECRET="djghhhhuuwiwuewieuwieuriwu"
-MONGO_LOCAL_CONN_URL="mongodb://localhost:27017/genealogy"
+MONGO_LOCAL_CONN_URL=mongodb+srv://thanhthainguyen:thanhthai-nguyen123@genealogy-wyzkf.azure.mongodb.net/genealogy?retryWrites=true&w=majority
 
 
 EMAIL_USERNAME="17521031@gm.uit.edu.vn"
