--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "nodemailer": "^6.4.6",
     "npm": "^6.14.4",
     "passport": "^0.4.1",
+    "passport-facebook": "^3.0.0",
     "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "request": "^2.88.0",
     "sendgrid": "^5.2.3",
     "session": "^0.1.0"
